# xtetris

./: README.md  README.txt
Documentazione html/: _field_8c.html  _field_8h.html  _game_graphics_8c.html  _menu_graphics_8c.html  _menu_graphics_8h_source.html  _moves_8h.html  _moves_8h_source.html  _pieces_8c.html  _pieces_8h.html  _player_8h.html  annotated.html  classes.html  files.html  functions.html  globals_type.html  globals_vars.html  index.html  main_8c.html  menudata.js
Documentazione html/search/: all_1.js  all_3.js  all_5.js  all_7.js  all_9.js  all_b.js  classes_0.js  defines_1.js  defines_4.js  defines_6.js  defines_7.html  defines_8.html  defines_9.js  files_3.js  functions_1.js  functions_4.js  functions_5.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_4.js  variables_6.js  variables_8.js
xtetris/: CMakeLists.txt  Field.c  Field.h  Game.c  Game.h  GameGraphics.c  GameGraphics.h  MenuGraphics.c  MenuGraphics.h  Moves.c  Moves.h  Pieces.c  Pieces.h  Player.c  Player.h  main.c  xtetris
